elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/Account_Tech_Spec__c.object-meta.xml
<CustomObject>
  <label>Specifica Tecnica</label>
  <pluralLabel>Specifiche Tecniche</pluralLabel>
  <nameField>
    <label>Specifica Tecnica Number</label>
    <type>AutoNumber</type>
    <displayFormat>TS-{000000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>