elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Category__c.field-meta.xml
<CustomField>
  <fullName>Category__c</fullName>
  <label>Categoria</label>
  <type>Picklist</type>
  <required>true</required>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Materiali</fullName><default>false</default><label>Materiali</label></value>
      <value><fullName>Dimensioni &amp; Tolleranze</fullName><default>false</default><label>Dimensioni &amp; Tolleranze</label></value>
      <value><fullName>Confezionamento / Imballo</fullName><default>false</default><label>Confezionamento / Imballo</label></value>
      <value><fullName>Etichettatura</fullName><default>false</default><label>Etichettatura</label></value>
      <value><fullName>Documentazione</fullName><default>false</default><label>Documentazione</label></value>
      <value><fullName>Qualità &amp; Certificazioni</fullName><default>false</default><label>Qualità &amp; Certificazioni</label></value>
      <value><fullName>Note Commerciali / Preferenze</fullName><default>false</default><label>Note Commerciali / Preferenze</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>