elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Is_Active__c.field-meta.xml
<CustomField>
  <fullName>Is_Active__c</fullName>
  <label>Attivo</label>
  <type>Checkbox</type>
  <defaultValue>true</defaultValue>
</CustomField>