elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Notes__c.field-meta.xml
<CustomField>
  <fullName>Notes__c</fullName>
  <label>Note</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>