elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Parameter__c.field-meta.xml
<CustomField>
  <fullName>Parameter__c</fullName>
  <label>Parametro</label>
  <type>Picklist</type>
  <valueSet>
    <controllingField>Category__c</controllingField>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Materiale principale</fullName><default>false</default><label>Materiale principale</label></value>
      <value><fullName>Materiale alternativo</fullName><default>false</default><label>Materiale alternativo</label></value>
      <value><fullName>Tg richiesto</fullName><default>false</default><label>Tg richiesto</label></value>
      <value><fullName>Halogen free</fullName><default>false</default><label>Halogen free</label></value>
      <value><fullName>UL requirement</fullName><default>false</default><label>UL requirement</label></value>
      <value><fullName>Dimensione max (mm)</fullName><default>false</default><label>Dimensione max (mm)</label></value>
      <value><fullName>Dimensione min (mm)</fullName><default>false</default><label>Dimensione min (mm)</label></value>
      <value><fullName>Tolleranza dimensionale</fullName><default>false</default><label>Tolleranza dimensionale</label></value>
      <value><fullName>Spessore target</fullName><default>false</default><label>Spessore target</label></value>
      <value><fullName>Tolleranza spessore</fullName><default>false</default><label>Tolleranza spessore</label></value>
      <value><fullName>Peso max</fullName><default>false</default><label>Peso max</label></value>
      <value><fullName>Confezione primaria</fullName><default>false</default><label>Confezione primaria</label></value>
      <value><fullName>Confezione secondaria</fullName><default>false</default><label>Confezione secondaria</label></value>
      <value><fullName>Materiale busta</fullName><default>false</default><label>Materiale busta</label></value>
      <value><fullName>Materiale scatola</fullName><default>false</default><label>Materiale scatola</label></value>
      <value><fullName>Numero pezzi per busta</fullName><default>false</default><label>Numero pezzi per busta</label></value>
      <value><fullName>Numero pezzi per scatola</fullName><default>false</default><label>Numero pezzi per scatola</label></value>
      <value><fullName>Riempitivo</fullName><default>false</default><label>Riempitivo</label></value>
      <value><fullName>Separazione pezzi</fullName><default>false</default><label>Separazione pezzi</label></value>
      <value><fullName>Palletizzazione</fullName><default>false</default><label>Palletizzazione</label></value>
      <value><fullName>Filmatura</fullName><default>false</default><label>Filmatura</label></value>
      <value><fullName>Etichetta interna</fullName><default>false</default><label>Etichetta interna</label></value>
      <value><fullName>Etichetta esterna</fullName><default>false</default><label>Etichetta esterna</label></value>
      <value><fullName>Barcode</fullName><default>false</default><label>Barcode</label></value>
      <value><fullName>QR code</fullName><default>false</default><label>QR code</label></value>
      <value><fullName>Etichetta cliente</fullName><default>false</default><label>Etichetta cliente</label></value>
      <value><fullName>Packing list</fullName><default>false</default><label>Packing list</label></value>
      <value><fullName>Certificato conformità</fullName><default>false</default><label>Certificato conformità</label></value>
      <value><fullName>Certificato materiali</fullName><default>false</default><label>Certificato materiali</label></value>
      <value><fullName>Report test</fullName><default>false</default><label>Report test</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>