elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Source__c.field-meta.xml
<CustomField>
  <fullName>Source__c</fullName>
  <label>Fonte</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Configuratore Automatico</fullName><default>false</default><label>Configuratore Automatico</label></value>
      <value><fullName>Excel</fullName><default>false</default><label>Excel</label></value>
      <value><fullName>Manuale</fullName><default>false</default><label>Manuale</label></value>
      <value><fullName>Import</fullName><default>false</default><label>Import</label></value>
      <value><fullName>Altro</fullName><default>false</default><label>Altro</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>