elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/UoM__c.field-meta.xml
<CustomField>
  <fullName>UoM__c</fullName>
  <label>Unita di Misura</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>mm</fullName><default>false</default><label>mm</label></value>
      <value><fullName>cm</fullName><default>false</default><label>cm</label></value>
      <value><fullName>m</fullName><default>false</default><label>m</label></value>
      <value><fullName>g</fullName><default>false</default><label>g</label></value>
      <value><fullName>kg</fullName><default>false</default><label>kg</label></value>
      <value><fullName>pz</fullName><default>false</default><label>pz</label></value>
      <value><fullName>%</fullName><default>false</default><label>%</label></value>
      <value><fullName>°C</fullName><default>false</default><label>°C</label></value>
      <value><fullName>n/a</fullName><default>false</default><label>n/a</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>