elco-salesforce/force-app/main/default/objects/Account_Tech_Spec__c/fields/Value__c.field-meta.xml
<CustomField>
  <fullName>Value__c</fullName>
  <label>Valore</label>
  <type>Text</type>
  <length>255</length>
  <required>true</required>
</CustomField>